<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fernandodelio@gmail.com">lio</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  
  <depend version_gte="0.7.0.dev0">tellopy</depend>
  <depend>h264_image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>numpy</depend>
  <depend>h264_msgs</depend>
  <depend>builtin_interfaces_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
